# mergeResultOfFEMTIC

./: README.md
src/: .clang-format  CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/mergeResultLib/: CMakeLists.txt
src/mergeResultLib/include/mergeResultLib/: mergeResult.h
src/mergeResultLib/src/: definitions.cpp  mergeResult.cpp
