CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# message(WARNING "file dir: ${CMAKE_SOURCE_DIR}")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin) 
# message(WARNING "${CMAKE_SOURCE_DIR}")

PROJECT(mergeResult LANGUAGES CXX)

add_subdirectory(main)
add_subdirectory(mergeResultLib)

